--- a/app/views/timeline/index.html.erb
+++ b/app/views/timeline/index.html.erb
@@ -1,19 +1,32 @@
 <h1>Timeline</h1>
 <%=form_tag '/write', method: 'post' do %>
-    <textarea name="naeyong"></textarea>
-    <input type="submit">
+    <div class="form-group">
+        <textarea name="naeyong" class="form-control"></textarea>
+    </div>
+    <div class="form-group">
+        <input type="submit" class="btn btn-class">
+    </div>
 <% end %>
 <ul>
     <% @blogs.each do |b| %>
-    <li><%=b.content%>
-        <%=form_tag '/comment' do %>
+    <li>
+        <p class="bg-info"><%=b.user.email%> :</p>
+            <div class="well">
+            <%=b.content%>
+        </div>
+        <%=form_tag '/comment', class: "form-inline" do %>
         <input type="hidden" name="blog_id" value="<%=b.id%>">
-        <input type="text" name="comment">
-        <input type="submit">
+        <div class="form-group">
+            <input type="text" name="comment" class="form-control">
+        </div>
+        <div class="form-group">
+             <input type="submit" class="btn btn-primary">
+        </div>
+       
         <% end %>
         <ol>
         <% b.comments.each do |c| %>
-            <li><%=c.msg%></li>
+            <li><%=c.user.email%> : <%=c.msg%></li>
         <% end %>
         </ol>
     </li>
